assets/src/components/routes/ActionWrapper/Action.css
/* ... */
.fullscreen-transformation__editor-panel .transformation-box__header {
	background-color: var(--bg-gray);
	border-radius: 0;
	height: 60px;
	border-top: 1px solid var(--border-primary);
	border-bottom: 2px solid var(--border-primary);
	position: sticky;
	top: 0;
	left: 0;
	z-index: 10;
}

.fullscreen-transformation__editor-panel .transformation-box__header-title {
	transition: opacity 0s;
	opacity: 1;
}

.transformation-box--is-fullscreen-animating .transformation-box__header-title {
	transition: opacity 0.2s;
	opacity: 0;
}

.fullscreen-transformation__editor-panel .editor-wrapper {
	border-radius: 0;
	border: 0 !important;
	height: 100%;
	position: relative;
	box-shadow: none !important;
}

.fullscreen-transformation__editor-panel .editor-wrapper__editor {
	height: 100% !important;
}

.action__export-mode {
	margin-top: 30px;
	display: flex;
	gap: 15px;
	align-items: center;
}

.action__export-mode-select {
	max-width: 400px;
	min-width: 300px;
}

.action__export-mode-error {
	font-size: 12px;
	color: var(--sl-color-danger-600);
	max-width: 400px;
	position: relative;
	top: 14px;
}

.action__matching-section .section__content {
	padding: 36px 36px 50px 36px;
}

.action__matching-wrapper {
	position: relative;
}

.action__matching-title {
	color: var(--text-light);
	margin-bottom: 6px;
}

.action__matching-properties {
	display: grid;
	grid-template-columns: 1fr 30px 1fr;
	gap: 20px;
	align-items: center;
	justify-content: center;
	max-width: 800px;
}

.action__matching-wrapper .combobox-input__error {
	margin-top: 3px;
}

.action__matching-properties sl-input::part(form-control-label) {
	font-size: 13px;
}

.action__matching-properties-equal {
	display: flex;
	justify-content: center;
	align-items: end;
	height: 100%;
	font-size: 30px;
	position: relative;
	right: 1px;
}

.action__matching-empty-error {
	color: var(--sl-color-danger-600);
	display: flex;
	align-items: center;
	gap: 3px;
	font-size: 13px;
	font-weight: 500;
	position: absolute;
	bottom: -35px;
	width: 100%;
	justify-content: center;
}

.action__matching-empty-error sl-icon {
	position: relative;
	top: 1px;
}

.action__update-on-duplicates {
	margin-top: 20px;
}

.action__update-on-duplicates-title {
	color: var(--text-light);
}

.action__query-buttons,
.action__file-buttons {
	margin-top: 44px;
	display: flex;
	gap: 15px;
}

.action__file-format,
.action__file-compression,
.action__file-ordering {
	margin-bottom: 30px;
}

.action__file-format-logo {
	margin-right: 8px;
}

.action__file-format sl-option::part(label) {
	display: flex;
	align-items: center;
	gap: 8px;
}

.action__file-format-logo .little-logo svg,
.action__file-format sl-option .little-logo svg {
	height: 18px;
}

.action__file-path-wrapper {
	position: relative;
	margin-bottom: 30px;
}

.action__file-path-description {
	font-size: 13px;
}

.action__file-complete-path,
.action__file-complete-path-error {
	position: absolute;
	left: 5px;
	font-size: 13px;
	margin-top: 1px;
	opacity: 0;
	transition: opacity 0.3s;
}

.action__file-complete-path {
	font-family: var(--monospace-fonts);
}

.action__file-complete-path--visible {
	opacity: 0.7;
}

.action__file-complete-path-error--visible {
	opacity: 1;
}

.action__file-complete-path-error {
	color: var(--sl-color-danger-500);
}

.action__file-sheets-wrapper {
	display: flex;
	align-items: end;
	justify-content: space-between;
	gap: 20px;
	margin-bottom: 30px;
}

.action__file-sheets {
	width: 100%;
}

.action__file-sheets--hide-list-box::part(listbox) {
	display: none;
}

.action__file-sheets-wrapper sl-button {
	min-width: 150px;
}

.action__file-sheets-input {
	margin-bottom: 30px;
}

.action__query-preview-drawer::part(base),
.action__file-preview-drawer::part(base) {
	z-index: 9999;
}

.action__query-preview-drawer .grid,
.action__file-preview-drawer .grid {
	height: 100%;
	display: block;
}

.action__query-preview-drawer::part(panel),
.action__file-preview-drawer::part(panel) {
	padding-top: 40px !important;
}

.action__query-preview-drawer::part(title),
.action__file-preview-drawer::part(title) {
	padding-top: 0 !important;
	padding-bottom: 0 !important;
	line-height: 2;
}

.action__query-preview-drawer-label,
.action__file-preview-drawer-label {
	display: flex;
	gap: 50px;
	align-items: center;
}

.action__query-preview-drawer-label sl-dropdown,
.action__file-preview-drawer-label sl-dropdown {
	margin-left: auto;
	margin-right: auto;
	position: relative;
	left: -52px;
}

.action sl-drawer sl-spinner {
	display: block;
	margin: auto;
	margin-top: 50px !important;
}

.action__issues {
	visibility: hidden;
	opacity: 0;
	width: 0;
	transition: opacity 0.5s;
}

.action__issues--visible {
	visibility: visible;
	opacity: 1;
	width: unset;
}

.action__issues > sl-button::part(base) {
	padding-left: 20px;
	background-color: transparent;
	color: var(--sl-color-warning-600);
}

.action__issues > sl-button::part(label) {
	padding-right: 20px;
}

.action__issues-list {
	background-color: var(--bg-primary);
	border: 1px solid var(--border-primary);
	border-radius: 5px;
	max-width: 500px;
	font-size: 13px;
	max-height: 500px;
	overflow-y: auto;
}

.action__issue {
	padding: 20px 30px;
	border-bottom: 1px solid var(--border-primary);
}

.action__issue:last-child {
	border-bottom: 0;
}

.action__mapping-left-header,
.action__mapping-right-header {
	font-size: 14px;
	border-bottom: 1px solid #e4e4e7;
	padding-bottom: 4px;
	width: 100%;
	margin-top: -10px;
	margin-bottom: -4px;
}

